@@ -13,11 +13,11 @@
         :url "https://github.com/uncomplicate/neanderthal"}
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
-  :dependencies [[org.clojure/clojure "1.8.0"]
-                 [uncomplicate/commons "0.3.1"]
-                 [uncomplicate/fluokitten "0.6.0"]
+  :dependencies [[org.clojure/clojure "1.9.0"]
+                 [uncomplicate/commons "0.4.0-SNAPSHOT"]
+                 [uncomplicate/fluokitten "0.6.1-SNAPSHOT"]
                  [uncomplicate/neanderthal-native "0.17.0"]
-                 [uncomplicate/clojurecl "0.7.2"]
+                 [uncomplicate/clojurecl "0.8.0-SNAPSHOT"]
                  [org.jocl/jocl-blast "1.2.0"]
                  [uncomplicate/clojurecuda "0.3.0-SNAPSHOT"]
                  [org.jcuda/jcublas "0.9.0"]
@@ -40,15 +40,16 @@
 
   ;;also replaces lein's default JVM argument TieredStopAtLevel=1
   :jvm-opts ^:replace ["-Dclojure.compiler.direct-linking=true"
-                       "-XX:MaxDirectMemorySize=16g" "-XX:+UseLargePages"]
+                       "-XX:MaxDirectMemorySize=16g" "-XX:+UseLargePages"
+                       "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"]
 
-  :profiles {:dev {:plugins [[lein-midje "3.2"]
-                             [lein-codox "0.10.1"]]
+  :profiles {:dev {:plugins [[lein-midje "3.2.1"]
+                             [lein-codox "0.10.3"]]
                    :global-vars {*warn-on-reflection* true
                                  *assert* false
                                  *unchecked-math* :warn-on-boxed
                                  *print-length* 128}
-                   :dependencies [[midje "1.8.3"]]}}
+                   :dependencies [[midje "1.9.1"]]}}
 
   :javac-options ["-target" "1.8" "-source" "1.8" "-Xlint:-options"]
   :source-paths ["src/clojure" "src/opencl" "src/cuda"]
